--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 350px;
     height: 600px;
     border-radius: 15px;
-    box-shadow: 20px 20px 20px 10px black;
+    box-shadow: 0px 30px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 #cubeLink {
@@ -40,10 +40,6 @@ body {
   #cubeLink:hover #eye {
     opacity: 1;
   }
-  
-
-
-
 
 #cube {
     height: 100%;
@@ -55,7 +51,6 @@ body {
     opacity: 30%;
     
 }
-
 
 #header {
     color: white;
@@ -85,7 +80,6 @@ body {
 #ethPlusIcon {
     margin-left: -5px;
 }
-
 
 #ethPlusIcon > svg {
     display: inline-block;
@@ -150,4 +144,3 @@ body {
 #mainName:hover {
     color: hsl(178, 100%, 50%);
 }
-
